Fix sidebar's overlay height when overflowed using debounce

--- a/common.css
+++ b/common.css
@@ -641,7 +641,7 @@ th {
 	filter: blur(4px);
 }
 .video-foreground {
-	background: linear-gradient(180deg, rgba(0, 0, 0, 0.75) 0%, rgba(96, 0, 0, 0.5) 100%);
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0.25) 0%, rgba(32, 0, 0, 0.25) 100%);
 }
 /* === ACCORDIONS === */
 .bywr-accordion .accordion-item {
